--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,6 +14,9 @@
         <a href="/menu/" style="display:inline-block; padding:10px 18px; border-radius:6px; text-decoration:none; background:#e67e22; color:#fff;">
          View Menu
         </a>
+        <a href="{% url 'about' %}" style="display:inline-block; padding:10px 18px; border-radius:6px; text-decoration:none; background:#3498db; color:#fff; margin-left:10px">
+            About Us
+        </a>
     </main>
 </body>
 </html>
