--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <% load static %}
     <title>About Us</title>
-    <style>
-        body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        padding: 20px;
-        }
-        img {
-        max-width: 400px;
-        height: auto;
-        margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <h1>About Our Restaurant</h1>
