--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to Our Restaurant</h1>
     <p>We are glad to serve you delicious food made with love!</p>
+    <h3> contact us: {{ phone }}</h3>
 </body>
 </html>
