--- a/home/templates/HTML_contact.html
+++ b/home/templates/HTML_contact.html
@@ -4,18 +4,39 @@
 <head>
     <title>Contact Us</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script>
+        function validateForm() {
+             let name = document.forms["contactForm"]["name"].value;
+             let email = document.forms["contactForm"]["email"].value;
+        
+            if (name == ""  || email == ""){
+                alert("Name and Email must be filled out!");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </head>
 <body>
     <h1>Contact Us</h1>
     <p> If you have any questions, feel free to reach out:</p>
 
-    <h3>Email:</h3>
-    <p>support@restaurant.com</p>
+    <form name="contactForm" onsubmit="return validateForm()">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
 
-    <h3>phone:</h3>
-    <p>+91 9876543210</p>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required<br><br>
 
-    <h3>Address:</h3>
-    <p>123, Food Street, Hyderabad, India</p>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message"></textarea><br><br>
+
+        <button type="submit">Submit</button>
+    </form>
+
+    <h3>Other Contact Info</h3>
+    <p>Email: support@restaurant.com</p>
+    <p>Phone: +91 9876543210</p>
+    <p>Address: 123, Food Street, Hyderabad, India</p>
 </body>
 </html>
