--- a/home/templates/HTML_reservations.html
+++ b/home/templates/HTML_reservations.html
@@ -21,5 +21,9 @@
 
         <input type="submit" value="Reserve">
     </form>
+
+    <footer style="margin-top:30px; text-align:center; font-size:14px; color:#555;">
+        <p>&copy; {{ now.year }} My Website.All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
