--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -48,6 +48,7 @@
 
     <footer>
         <p>&copy; {{ now.year }} Our Restaurant. All Rights Reserved.</p>
+        <p class="hours">Opening Hours: Mon-Fri: 11am-9pm | Sat-Sun: 10am-10pm</p>
     </footer>
 </body>
 </html>
