--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -25,3 +25,10 @@ p {
     background: white;
     box-shadow: 0 2px 8px rgba(0,0,0,0,1);
 }
+
+.logo {
+    display: block;
+    margin: 20px auto;
+    max-width: 150px;
+    height: auto;
+}
