--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -39,6 +39,7 @@
     </style>
 </head>
 <body>
+    <img src="{% static 'images/logo.png' %}" alt="Restaurant Logo" class="logo">
     <header>
         <h1> Welcome to Our Restaurant</h1>
     </header>
