--- a/home/templates/HTML_contact.html
+++ b/home/templates/HTML_contact.html
@@ -21,22 +21,19 @@
     <h1>Contact Us</h1>
     <p> If you have any questions, feel free to reach out:</p>
 
-    <form name="contactForm" onsubmit="return validateForm()">
+    {% if message %}
+        <p style="color: green;">{{ message }}</p>
+    {% endif %}
+
+    <form name="contactForm" method="post" onsubmit="return validateForm()">
+        {% csrf_token %}
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
 
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required<br><br>
 
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message"></textarea><br><br>
-
         <button type="submit">Submit</button>
     </form>
-
-    <h3>Other Contact Info</h3>
-    <p>Email: support@restaurant.com</p>
-    <p>Phone: +91 9876543210</p>
-    <p>Address: 123, Food Street, Hyderabad, India</p>
 </body>
 </html>
