--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -4,11 +4,16 @@
     <title>Menu</title>
 </head>
 <body>
-    <h1>Menu Items</h1>
-    <ul>
-        {% for item in menu_items %}
-            <li>{{ item.name }} - &#8377;{{ item.price }}</li>
-        {% endfor %}
-    </ul>
+    <h1>Our Items</h1>
+
+    {% for item in items %}
+        <div>
+            <h2>{{ item.name }}</h2>
+            <p>{{ item.description }}</p>
+            <p>price: &#8377,{{ item.price }}</p>
+        </div>
+    {% empty %}
+        <p>No menu items available yet,</p>
+    {% endfor %}
 </body>
 </html>
