--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -39,7 +39,10 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to {{ restaurant_name }}</h1>
+<header>
+    <h1>{{ restaurant.name }}</h1>
+    <p>{{ restaurant.address }}</p>
+</header>
       
 </body>
 </html>
